 ! gl.UnitPieceMatrix & gl.UnitPieceMultMatrix do now the same and work from UnitSpace & aren't recursive anymore (don't depend on the parent-piece)
 ! remove LuaLobby
 - Spring.SetTerrainTypeData now only updates pathfinder when there is a real change (performance)
 - fix crash in LuaUnitDefs when trying to read deathExpWeaponDef (#3333 & #3325)

CollisionVolumes:
 ! drop support for ellipsoid-cylinders and ellipsoids
    cylinders with round(!) baseplates are still supported!
    simplify how damage from an explosion is calculated, fewer magic numbers, etc
    no more distance approximations means no more invincible units (or features)
    and no more general "weird" cases like 3103
    THIS WILL CAUSE BALANCE CHANGES, BE PREPARED
 ! get rid of TYPE_FOOTPRINT, it was an alias for TYPE_SPHERE in the continuous case which is now default and the original intent (a shape defined by the CSG 	intersection of sphere and footprint) would have been tricky to get right
    instead support a {Unit,Feature}Def key "useFootPrintCollisionVolume" which
    makes a collision volume a box with dimensions equal to the object's footprint
    (this overrides any custom scaling and/or offsets)
 ! let projectiles explode _on_ collision volumes and not in a interpolated pos in front of it

Pathing:
 - faster updates
 - legacy: use omp in ::Update to multithread a function that eats 40% of the time spend in ::Update
   - this gives a _massive_ boost with like >30% more FPS
   - it needs low latency omp threads to work, those are currently broken in gomp, the bug will be fixed with the next release of gcc
 - QTPFS: a lot fixes & optimizations, fixed desync (#3339)
 - give pathfinder debug-data drawing its own shortcut (alt+p)
 - GMT: rewrite collision handling between units and static objects (again)   instead of using impulse to push units away, do SCII-style strafing   result: www.youtube.com/watch?v=4rycY4JfLGs
 ! put on upper limit on directional slope tolerance for "downhill" slopes