@@ -14,6 +14,7 @@ class LuaUnsyncedRead {
 
 	private:
 		static int IsReplay(lua_State* L);
+		static int GetReplayLength(lua_State* L);
 		static int GetModUICtrl(lua_State* L);
 
 		static int GetDrawFrame(lua_State* L);
